--- a/student-management-frontend/package.json
+++ b/student-management-frontend/package.json
@@ -43,6 +43,7 @@
     "@progress/kendo-theme-default": "^5.0.0",
     "apollo-angular": "^3.0.1",
     "graphql": "^16",
+    "moment": "^2.29.3",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
