--- a/student-management-frontend/package.json
+++ b/student-management-frontend/package.json
@@ -42,10 +42,13 @@
     "@progress/kendo-licensing": "^1.0.2",
     "@progress/kendo-theme-default": "^5.0.0",
     "apollo-angular": "^3.0.1",
+    "class-validator": "^0.13.2",
     "graphql": "^16",
+    "graphql-utilities": "^0.0.14",
     "moment": "^2.29.3",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
+    "type-graphql": "^1.1.1",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
