--- a/student-management-backend/package.json
+++ b/student-management-backend/package.json
@@ -22,12 +22,14 @@
   },
   "dependencies": {
     "@nestjs/apollo": "^10.0.9",
+    "@nestjs/bull": "^0.5.4",
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/graphql": "^10.0.10",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/typeorm": "^8.0.3",
     "apollo-server-express": "^3.6.7",
+    "bull": "^4.8.2",
     "graphql": "^16.4.0",
     "graphql-tools": "^8.2.8",
     "pg": "^8.7.3",
@@ -40,6 +42,7 @@
     "@nestjs/cli": "^8.0.0",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
+    "@types/bull": "^3.15.8",
     "@types/express": "^4.17.13",
     "@types/jest": "27.4.1",
     "@types/node": "^16.0.0",
