service to service communication tested

--- a/student-management-backend/package.json
+++ b/student-management-backend/package.json
@@ -26,8 +26,11 @@
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/graphql": "^10.0.10",
+    "@nestjs/microservices": "^8.4.4",
     "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/platform-socket.io": "^8.4.4",
     "@nestjs/typeorm": "^8.0.3",
+    "@nestjs/websockets": "^8.4.4",
     "apollo-server-express": "^3.6.7",
     "bull": "^4.8.2",
     "graphql": "^16.4.0",
