--- a/student-management-frontend/package.json
+++ b/student-management-frontend/package.json
@@ -33,6 +33,7 @@
     "@progress/kendo-angular-l10n": "^3.0.0",
     "@progress/kendo-angular-label": "^3.0.0",
     "@progress/kendo-angular-layout": "^6.6.0",
+    "@progress/kendo-angular-notification": "^3.0.5",
     "@progress/kendo-angular-pdf-export": "^3.0.0",
     "@progress/kendo-angular-popup": "^4.0.3",
     "@progress/kendo-angular-progressbar": "^2.0.0",
@@ -46,6 +47,7 @@
     "graphql": "^16",
     "graphql-utilities": "^0.0.14",
     "moment": "^2.29.3",
+    "ngx-socket-io": "^4.2.0",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
     "type-graphql": "^1.1.1",
