--- a/student-management-backend/package.json
+++ b/student-management-backend/package.json
@@ -31,10 +31,12 @@
     "@nestjs/platform-socket.io": "^8.4.4",
     "@nestjs/typeorm": "^8.0.3",
     "@nestjs/websockets": "^8.4.4",
+    "apollo-angular": "^3.0.1",
     "apollo-server-express": "^3.6.7",
     "bull": "^4.8.2",
     "graphql": "^16.4.0",
     "graphql-tools": "^8.2.8",
+    "nest-csv-parser": "^2.0.4",
     "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
