--- a/student-management-backend/package.json
+++ b/student-management-backend/package.json
@@ -24,6 +24,7 @@
     "@nestjs/apollo": "^10.0.9",
     "@nestjs/bull": "^0.5.4",
     "@nestjs/common": "^8.0.0",
+    "@nestjs/config": "^2.0.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/graphql": "^10.0.10",
     "@nestjs/microservices": "^8.4.4",
@@ -41,6 +42,7 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
+    "socket.io-client": "^4.5.0",
     "typeorm": "^0.2.45"
   },
   "devDependencies": {
