--- a/student-management-backend/package.json
+++ b/student-management-backend/package.json
@@ -35,6 +35,7 @@
     "apollo-angular": "^3.0.1",
     "apollo-server-express": "^3.6.7",
     "bull": "^4.8.2",
+    "csv-parse": "^5.0.4",
     "graphql": "^16.4.0",
     "graphql-tools": "^8.2.8",
     "nest-csv-parser": "^2.0.4",
